Made sure dismissal and validation works

--- a/styles/handlebars/validation_grid.handlebars
+++ b/styles/handlebars/validation_grid.handlebars
@@ -1,4 +1,4 @@
-<div class="validation-container checkin-row">
+<div id="id_{{checkin.id}}_row" class="validation-container checkin-row" data-validation-id="{{checkin.id}}">
   <div class="validation-player">{{checkin.player}}</div>
   <div class="validation-beer">
      <a href="{{checkin.checkin_url}}" target="_blank">
