Fixed Untappd URL

--- a/styles/handlebars/validation_grid.handlebars
+++ b/styles/handlebars/validation_grid.handlebars
@@ -1,7 +1,7 @@
 <div id="id_{{checkin.id}}_row" class="validation-container checkin-row" data-validation-id="{{checkin.id}}">
   <div class="validation-player">{{checkin.player}}</div>
   <div class="validation-beer">
-     <a href="{{checkin.checkin_url}}" target="_blank">
+     <a href="{{checkin.untappd_checkin}}" target="_blank">
        <em>{{checkin.beer}} from {{checkin.brewery}}</em>
      </a>
   </div>
