--- a/beers/templates/includes/add-bonus-modal.html
+++ b/beers/templates/includes/add-bonus-modal.html
@@ -16,8 +16,8 @@
           <input id="description" class="form-control" type="text" placeholder="Description"/>
         </div>
         <div class="form-group">
-          <label class="control-label" for="hash_tags">Hash Tags (comma separated)</label>
-          <input id="hash_tags" class="form-control" type="text" placeholder="tag1, tag2"/>
+          <label class="control-label" for="hashtags">Hash Tags (comma separated)</label>
+          <input id="hashtags" class="form-control" type="text" placeholder="tag1, tag2"/>
         </div>
         <div class="form-group">
           <label class="control-label" for="point_value">Point value</label>
