--- a/beers/templates/beers/contest.html
+++ b/beers/templates/beers/contest.html
@@ -86,12 +86,13 @@
 	</div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active"><a href="#leaderboard" aria-controls="leaderboard" role="tab" data-toggle="tab">Leaderboard</a></li>
-      <li role="presentation"><a href="#beers" aria-controls="beers" role="tab" data-toggle="tab">Beers</a></li>
-      <li role="presentation"><a href="#breweries" aria-controls="breweries" role="tab" data-toggle="tab">Breweries</a></li>
-      <li role="presentation"><a href="#bonuses" aria-controls="bonuses" role="tab" data-toggle="tab">Bonuses</a></li>
+      <li role="presentation" {% if not activerow or activerow == "leaderboard" %}class="active"{% endif %}><a href="#leaderboard" aria-controls="leaderboard" role="tab" data-toggle="tab">Leaderboard</a></li>
+      <li role="presentation"><a href="#beers" aria-controls="beers" role="tab" data-toggle="tab" {% if activerow == "beers" %}class="active"{% endif %}>Beers</a></li>
+      <li role="presentation"><a href="#breweries" aria-controls="breweries" role="tab" data-toggle="tab" {% if activerow == "breweries" %}class="active"{% endif %}>Breweries</a></li>
+      <li role="presentation"><a href="#bonuses" aria-controls="bonuses" role="tab" data-toggle="tab" {% if activerow == "bonuses" %}class="active"{% endif %}>Bonuses</a></li>
       {% if is_creator %}
-      <li role="presentation"><a href="#validate" aria-controls="validate" role="tab" data-toggle="tab">Validate</a></li>
+      <li role="presentation"><a href="#validate" aria-controls="validate" role="tab" data-toggle="tab" {% if activerow == "validate" %}class="active"{% endif %}>Validate</a></li>
+      <li role="presentation"><a href="#addcheckins" aria-controls="addcheckins" role="tab" data-toggle="tab" {% if activerow == "checkins" %}class="active"{% endif %}>Checkins</a></li>
       {% endif %}
     </ul>
 
@@ -211,6 +212,20 @@
         <div class="checkin-pages">
           <span class="step-links">
           </span>
+        </div>
+      </div>
+      <div role="tabpanel" class="tab-pane" id="addcheckins">
+        <div class="row">
+          <div class="col-lg-6">
+            <form>
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Untappd URL">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="button">Add</button>
+                </span>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
       {% endif %}
